--- a/tft_deck_maker/package.json
+++ b/tft_deck_maker/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "my-card-maker",
+  "name": "tft_deck_maker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-firebase/database": "^0.3.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "firebase": "^8.4.2",
-    "gh-pages": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-select": "^4.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
