--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "esbuild-windows-64": "^0.12.1",
     "firebase": "^8.4.2",
     "gh-pages": "^3.1.0",
+    "netlify-cli": "^6.5.4",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
