--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-button": "^1.1.2",
     "react-select": "^4.3.1",
     "update-notifier": "^5.1.0",
     "web-vitals": "^1.0.1"
